# Settings_copier

./: .gitignore  README.md  README_ICON.md
Copier_app/: .clang-format  CMakeLists.txt  ConstantsUtil.h  Destinator.cpp  Destinator.h  checkers.h  interfacewidget.cpp  interfacewidget.h  interfacewidget.ui  main.cpp  res.qrc
Copier_app/resources/: src_icon.rc
SettingsCopier/: CMakeLists.txt
SettingsCopier/headers/: centralwidet.cpp  centralwidet.hpp  mainwindow.cpp  mainwindow.hpp  pathmanager.cpp  pathmanager.hpp  popup.cpp  popup.hpp  pressetstab.cpp  pressetstab.hpp  utilities.hpp
SettingsCopier/resources/: icon.rc  res.qrc
